# dev_env_and_automatisation

./: .gitattributes  .gitignore  _toc.yml  conclusion.md  index.md  myst.yml  pixi.toml  plan.md  readme.md  vite.config.js
.github/workflows/: deploy.yml
material/0.initialization/required_files/: CMakeLists.txt
material/0.initialization/required_files/include/splinart/: spline.hpp
material/0.initialization/required_files/tests/: CMakeLists.txt  main.cpp  test_spline.cpp
material/1.initialization/: CMakeLists.txt  LICENSE  pixi.toml
material/1.initialization/examples/: circle.cpp
material/1.initialization/include/splinart/: build_img.hpp  imshow.hpp  shapes.hpp  spline.hpp
material/1.initialization/required_files/: .gitignore  readme.md
material/1.initialization/required_files/examples/: CMakeLists.txt  circle.cpp
material/1.initialization/required_files/include/splinart/: build_img.hpp  imshow.hpp  shapes.hpp  spline.hpp
material/1.initialization/required_files/src/: command_line.cpp  shapes.cpp
material/1.initialization/required_files/tests/: main.cpp  test_circle.cpp
material/1.initialization/src/: command_line.cpp  shapes.cpp
material/1.initialization/tests/: CMakeLists.txt  test_circle.cpp
material/1.pixi/solution/: pixi.toml
material/2.first-action/solution/.github/wokflows/: ci.yml
material/3.pre-commit/solution/: pixi.toml
material/3.pre-commit/solution/.github/workflows/: ci.yml
material/3.pre-commit/solution/examples/: circle.cpp
material/3.pre-commit/solution/include/splinart/: imshow.hpp  shapes.hpp
material/3.pre-commit/solution/src/: command_line.cpp
material/4.documentation/required_files/doc/source/: conf.py  index.md
material/4.documentation/solution/: .pre-commit-config.yaml
material/4.documentation/solution/.github/workflows/: ci.yml  doc.yml
material/4.documentation/solution/doc/: doxyfile
material/4.documentation/solution/doc/source/: index.md
material/4.documentation/solution/examples/: circle.cpp
material/4.documentation/solution/include/splinart/: build_img.hpp  spline.hpp
material/4.documentation/solution/src/: command_line.cpp
material/4.documentation/solution/tests/: test_spline.cpp
material/5.long-run/required_files/: .clang-tidy
material/5.long-run/solution/: compile_commands.json
material/5.long-run/solution/examples/: circle.cpp
material/5.long-run/solution/src/: command_line.cpp  shapes.cpp
material/5.long-run/solution/tests/: test_spline.cpp
material/6.packaging/required_files/.ci_support/: linux_64_.yaml  osx_64_.yaml  osx_arm64_.yaml  run_win_build.bat  win_64_.yaml
material/6.packaging/required_files/recipe/: bld.bat  build.sh  meta.yaml
material/6.packaging/solution/: readme.md
overview/: communication.md  depot.md  environment.md  intro-github-actions.md  pre-commit.md
practical_session/: 00-environment.md  01-depot.md  communication.md  conclusion.md  documentation.md  first-action.md  initialisation.md  long-work.md  packaging.md  pre-commit.md
practical_session/figures/: ci-yml-2.excalidraw  ci-yml-3.excalidraw  ci-yml.excalidraw  semver.excalidraw
(+12 files in other folders)
